# opp142

./: main.py  pyproject.toml
src/: category.py  lawn_grass_product.py  product.py  product_iterator.py  smartphone_product.py  utils.py
tests/: conftest.py  test_categogy.py  test_product.py  test_smatphone.py
